--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
 
         location /backend {
             rewrite /backend(.*) $1 break;
-            proxy_pass http://192.168.100.204:7777/;
+            proxy_pass http://192.168.100.205:7777;
         }
     }
 }
