--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "keycloak-angular": "^13.0.0",
+    "keycloak-js": "^20.0.5",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -30,6 +32,7 @@
     "@angular/cli": "~15.2.0",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^18.15.7",
     "dotenv": "^16.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
