--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 BACKEND_URL=http://localhost:7777/
 API_URL_TEST="12345"
 OTHER_KEY="aaabbbccc"
+API_DOTENV="apidotenv"
+API_KEY_FRONTEND=thisismyfuckingkeynowprinted
